--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/index.js"
+    "test": "jest",
+    "dev": "nodemon src/index.js"
   },
   "author": "cristian Motta <cdmottah@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "bufferutil": "^4.0.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "utf-8-validate": "^5.0.10"
   }
