--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "cristian Motta <cdmottah@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.8.1"
