feat(server): add basic authentication service and API scaffolding
Introduce basic server-side authentication functionality and initial API structure. Key updates include:
- Configure CORS with a whitelist of allowed origins.
- Add route handlers for user management (`/users`) with CRUD operations.
- Implement error-handling middlewares, including support for Boom errors.
- Scaffold user service to handle in-memory user management.

These changes set up a foundation for server-side operations, including secure communication and API development.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "cristian Motta <cdmottah@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@socket.io/admin-ui": "^0.5.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.8.1"
